packages/isar_db/test/errors/class/mixin.dart
// only classes

import 'package:isar_db/isar_db.dart';

// Test case for mixin validation

// ignore: invalid_annotation_target - Test case for mixin validation
@collection
mixin Test {}
